# Diagnosis_helper

./: README.md  pyproject.toml
src/api/: chatbot.py  data_loader.py  diagnostic_api.py  utils.py
src/frontend/: app.py  chatbot_ui.py  diagnosis_ui.py
src/models/: cnn_model.py  federated.py  federated_train.py  model_loader.py
