[project]
name = "diagnosis-asst"
version = "0.1.0"
description = ""
authors = [
    {name = "Pradeepaa001",email = "mpradeepaa2020@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "diagnosis_asst", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
